[project]
name = "ai-qwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "huggingface-hub>=1.5.0",
    "transformers>=5.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "bitsandbytes>=0.49.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
