[project]
name = "ai-qwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "huggingface-hub>=1.5.0",
    "transformers>=5.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "bitsandbytes>=0.49.2",
    "rich>=14.3.3",
    "duckduckgo-search>=8.1.1",
    "pydantic>=2.12.5",
    "faiss-cpu>=1.13.2",
    "sentence-transformers>=5.2.3",
    "questionary>=2.1.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
